[package]
name = "mwixnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["onion"]

[dependencies]
arti-client = { version = "0.18.0", default-features = false, features = ["async-std", "rustls", "onion-service-client", "onion-service-service"] }
arti-hyper = "0.18.0"
async-std = { version = "1", features = ["tokio1"] }
async-trait = "0.1.74"
blake2 = { package = "blake2-rfc", version = "0.2" }
byteorder = "1"
bytes = "1.5.0"
chacha20 = "0.9.1"
chrono = "0.4.31"
clap = { version = "2.33", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
curve25519-dalek = "4.1.2"
dirs = "2.0"
ed25519-dalek = "2.1.1"
function_name = "0.3.0"
futures = "0.3"
fs-mistrust = "0.7.9"
hmac = { version = "0.12.0", features = ["std"] }
hyper = "0.14.28"
hyper-tls = "0.6.0"
itertools = { version = "0.12.0" }
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
lazy_static = "1"
pbkdf2 = "0.8.0"
rand = "0.7.3"
remove_dir_all = "0.8.2"
ring = "0.16"
rpassword = "4.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
sha2 = "0.10.0"
thiserror = "1.0.30"
tls-api = "0.9.0"
tls-api-native-tls = "0.9.0"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.8"
tor-hscrypto = "0.18.0"
tor-hsrproxy = "0.18.0"
tor-hsservice = "0.18.0"
tor-llcrypto = "0.18.0"
tor-keymgr = "0.18.0"
tor-rtcompat = "0.18.0"
x25519-dalek = "0.6.0"
grin_onion = { path = "./onion" }
grin_secp256k1zkp = { version = "0.7.14", features = ["bullet-proof-sizing"] }
grin_api = "5.3.1"
grin_core = "5.3.1"
grin_chain = "5.3.1"
grin_keychain = "5.3.1"
grin_p2p = "5.3.1"
grin_servers = "5.3.1"
grin_store = "5.3.1"
grin_util = "5.3.1"
grin_wallet_api = "5.3.1"
grin_wallet_config = "5.3.1"
grin_wallet_controller = "5.3.1"
grin_wallet_impls = "5.3.1"
grin_wallet_libwallet = "5.3.1"
grin_wallet_util = "5.3.1"
log = "0.4.20"